<resources>
    <string name="app_name">Marassi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_user_name">Enter Your User Name</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="you_don_t_have_an_account">"You don't have an account? "</string>
    <string name="create_an_account">Create an account</string>
</resources>